helm-charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: <loadbalancerdns>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/hello
            pathType: Prefix
            backend:
              service:
                name: backend-helloservice
                port:
                  number: 3001
          - path: /api/profile
            pathType: Prefix
            backend:
              service:
                name: backend-profileservice
                port:
                  number: 3002
